# pkg-dist

./: .gitignore  Cargo.toml  README  README.md  lines-counter.sh
deriver-discover/: Cargo.toml
deriver-discover/src/: main.rs  utils.rs
deriver-pacman/: Cargo.toml
development/discover/input/: core.xml
development/discover/output/: core.json
development/manager/root/etc/: pi-conf.json
development/pacman/output/multilib/: lib32-apitrace-9.0-2-x86_64.pkg.tar.zst  lib32-db-5.3.28-4-x86_64.pkg.tar.xz  lib32-dconf-0.36.0-1-x86_64.pkg.tar.zst  lib32-gst-plugins-good-1.16.2-1-x86_64.pkg.tar.zst  lib32-harfbuzz-2.7.0-1-x86_64.pkg.tar.zst  lib32-krb5-1.18.2-1-x86_64.pkg.tar.zst  lib32-libavc1394-0.5.4-2-x86_64.pkg.tar.xz  (+21 more)
fake-api/: index.js
fake-api/public/apps/: nodejs.app
package-builder/: Cargo.toml
package-builder/src/: main.rs
package-builder/src/interfaces/: store.rs
package-builder/src/schemas/: app.rs  store.rs
package-manager/: Cargo.toml
package-manager/root/store/: cachecode.app
package-manager/src/: main.rs  operations.rs
package-manager/src/database/: db.rs  sync.rs
package-repository/: package-lock.json
pi-deriver-discover/: Cargo.toml
pi-deriver-discover/src/: interface.rs  xml.rs
pi-deriver-pacman/: Cargo.toml  README.md  TODO.md  clean_dist.sh
pi-deriver-pacman/src/helpers/: download.rs  extractor.rs
pi-lib/: Cargo.toml
pi-lib/src/emuns/: architecture.rs  license.rs
pi-lib/src/interfaces/: application.rs  configuration.rs  repository.rs  store.rs  version.rs
pi-lib/src/operations/: installer.rs  remover.rs  updater.rs
pi-lib/src/structures/: application.rs  configuration.rs  mod.rs  repository.rs  version.rs
pi-lib/src/utils/: compare.rs  config.rs  extract.rs  file.rs
pi-library/: Cargo.toml
pi-library/src/emuns/: architecture.rs  license.rs  mod.rs
pi-library/src/interfaces/: application.rs  repository.rs  store.rs  version.rs  xml.rs
pi-library/src/operations/: installer.rs  mod.rs  updater.rs
pi-library/src/structures/: application.rs  configuration.rs  mod.rs  repository.rs  store.rs  version.rs  xml.rs
pi-library/src/utils/: config.rs  download.rs  rest.rs
pi-package-builder/: Cargo.toml
pi-package-builder/src/: main.rs
pi-package-builder/src/helpers/: file.rs  mod.rs
pi-package-builder/src/interfaces/: desc.rs  store.rs
pi-package-manager/: Cargo.toml
pi-package-manager/src/: cli_args.rs  main.rs
pi-package-manager/src/database/: db.rs  sync.rs
pi-package-repository/: package-lock.json  package.json
pi-package-repository/public/apps/: atom.app
pi-package-repository/public/db/: db.json
pi-pb/: Cargo.toml
pi-pb/src/: main.rs
pi-pb/src/helpers/: file.rs
pi-pb/src/interfaces/: desc.rs  mod.rs  store.rs
pi-pb/src/schemas/: app.rs
pi-pm/: Cargo.toml
pi-pm/root/store/: cacheatom.app
pi-pm/root/store/cache/: nodejs.app
pi-pm/root/store/db/: registry.json
pi-pm/src/: main.rs
pi-pm/src/database/: db.rs  sync.rs
pi-stream/: Cargo.toml
pi-stream/data/New Folder/: addon.xml  inputmethod.xml
pi-stream/src/: interface.rs  main.rs  utils.rs  xml.rs
shared-library/: Cargo.toml
shared-library/src/: lib.rs
shared-library/src/interfaces/: configuration.rs
shared-library/src/operations/: remover.rs  search.rs
shared-library/src/utils/: compare.rs  file.rs  mod.rs
(+11998 files in other folders)
