[package]
name = "pi-library"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
# xml
treexml = "0.7"
# downloader
anyhow = "1.0.32"
indicatif = "0.15.0"
reqwest = "0.10.7"
structopt = "0.3.15"
tokio = { version = "0.2.22", features = ["macros", "fs"] }
# terminal color
colored = "2.0.0"
itertools = "0.9.0"
# compression
flate2 = "1.0.16"
tar = "0.4.29"
# rest
curl = "0.4.31"
# enum helper
strum = "0.19.2"
strum_macros = "0.19.2"
