[package]
name = "pi-pm"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pi-lib = { path = "../pi-lib" }
serde = "1.0.114"
serde_json = "1.0.57"
serde_derive = "1.0.114"
clap = "2.33.1"
colored = "2.0.0"