[package]
name = "pi-stream"
version = "0.1.0"
authors = ["mrrbrilliant <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
treexml = "0.7"
strum = "0.19.2"
strum_macros = "0.19.2"
